--- a/Trabalho1Semestre/QuemSomos.html
+++ b/Trabalho1Semestre/QuemSomos.html
@@ -5,28 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="QuemSomos.css">
+    <script src="main.js" type="text/javascript"></script>
     <script src="QuemSomos.js" type="text/javascript"></script>
     <link rel="icon" href="img/usf.png" type="image/png">
 
     <title>Quem Somos</title>
 </head>
 <body>
-
-    <div id="navbar">
-        <a href="OQueFazemos.html">O que fazemos</a>
-        <a href="Indicadores.html">Indicadores</a>
-        <a href="Recursos.html">Recursos</a>
-        <a href="MaisApoio.html">Mais apoio</a>
-      </div>
-
-    <!--*****Adicionar NavBar/menu para navegar entre as paginas*****-->
+    <nav class="sandwich">
+        <label class="label" for="toggle">&#9776;</label>
+        <input type="checkbox" id="toggle"/>
+        <ul class="menu grid">
+          <li><a href="OQueFazemos.html">O que fazemos</a></li>
+          <li><a href="Indicadores.html">Indicadores</a></li>
+          <li><a href="Recursos.html">Recursos</a></li>
+          <li><a href="MaisApoio.html">Mais apoio</a></li>
+        </ul>
+      </nav>
 
     <!-- Links da Guia -->
     <div class="tab">
-        <button class="tablinks active" id="defaultOpen" onclick="openCity(event, 'Info')">Informação geral</button>
-        <button class="tablinks" onclick="openCity(event, 'Equipa')">Equipa</button>
-        <button class="tablinks" onclick="openCity(event, 'Contactos')">Contactos</button>
-        <button class="tablinks" onclick="openCity(event, 'Localizacao')">Localização</button>
+        <button class="tablinks active" id="defaultOpen" onclick="openPage(event, 'Info')">Informação geral</button>
+        <button class="tablinks" onclick="openPage(event, 'Equipa')">Equipa</button>
+        <button class="tablinks" onclick="openPage(event, 'Contactos')">Contactos</button>
+        <button class="tablinks" onclick="openPage(event, 'Localizacao')">Localização</button>
     </div>
   
     <!-- Conteúdo da Guia  -->
